--- a/package.json
+++ b/package.json
@@ -10,10 +10,13 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emoji-mart/data": "^1.2.1",
+    "@emoji-mart/react": "^1.1.1",
     "@headlessui/react": "^2.2.2",
     "@tailwindcss/vite": "^4.1.3",
     "axios": "^1.8.4",
     "date-fns": "^4.1.0",
+    "emoji-mart": "^5.6.0",
     "framer-motion": "^12.7.4",
     "jwt-decode": "^4.0.0",
     "lodash": "^4.17.21",
