--- a/package.json
+++ b/package.json
@@ -4,20 +4,20 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-  "preinstall": "npm config set legacy-peer-deps true",
-  "dev": "vite",
-  "build": "vite build",
-  "lint": "eslint .",
-  "preview": "vite preview"
-},
+    "preinstall": "npm config set legacy-peer-deps true",
+    "dev": "vite",
+    "build": "vite build",
+    "lint": "eslint .",
+    "preview": "vite preview"
+  },
   "dependencies": {
     "@emoji-mart/data": "^1.2.1",
-    "@emoji-mart/react": "^1.1.1",
     "@headlessui/react": "^2.2.2",
     "@tailwindcss/vite": "^4.1.3",
     "axios": "^1.8.4",
     "date-fns": "^4.1.0",
     "emoji-mart": "^5.6.0",
+    "emoji-picker-react": "^4.12.3",
     "framer-motion": "^12.7.4",
     "jwt-decode": "^4.0.0",
     "lodash": "^4.17.21",
@@ -26,6 +26,7 @@
     "react-datepicker": "^8.3.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
+    "react-markdown": "^10.1.0",
     "react-router-dom": "^7.5.0",
     "react-select": "^5.10.1",
     "react-toastify": "^11.0.5",
