--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@tailwindcss/vite": "^4.1.3",
     "axios": "^1.8.4",
     "date-fns": "^4.1.0",
+    "dompurify": "^3.2.6",
     "emoji-mart": "^5.6.0",
     "emoji-picker-react": "^4.12.3",
     "framer-motion": "^12.7.4",
