--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
 VITE_API_BASE=https://marketing-uoxu.onrender.com
 VITE_RAZORPAY_KEY_ID=rzp_test_wZzgxWxiJTWptw
+VITE_GOOGLE_CLIENT_ID=your-google-client-id.apps.googleusercontent.com
