--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@emoji-mart/data": "^1.2.1",
     "@headlessui/react": "^2.2.2",
+    "@react-oauth/google": "^0.12.2",
     "@tailwindcss/vite": "^4.1.3",
     "axios": "^1.8.4",
     "date-fns": "^4.1.0",
@@ -28,8 +29,10 @@
     "react": "^19.0.0",
     "react-datepicker": "^8.3.0",
     "react-dom": "^19.0.0",
+    "react-facebook-login": "^4.1.1",
     "react-icons": "^5.5.0",
     "react-markdown": "^10.1.0",
+    "react-phone-input-2": "^2.15.1",
     "react-router-dom": "^7.5.0",
     "react-select": "^5.10.1",
     "react-toastify": "^11.0.5",
