--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-VITE_API_BASE=https://marketing-uoxu.onrender.com
+VITE_API_BASE=https://marketing.foodchow.co.uk
 VITE_RAZORPAY_KEY_ID=rzp_test_wZzgxWxiJTWptw
 VITE_GOOGLE_CLIENT_ID=your-google-client-id.apps.googleusercontent.com
 VITE_FACEBOOK_APP_ID=123456789012345
