--- a/package.json
+++ b/package.json
@@ -12,7 +12,11 @@
   },
   "dependencies": {
     "@emoji-mart/data": "^1.2.1",
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.1",
     "@headlessui/react": "^2.2.2",
+    "@mui/icons-material": "^7.3.0",
+    "@mui/material": "^5.15.14",
     "@react-oauth/google": "^0.12.2",
     "@tailwindcss/vite": "^4.1.3",
     "axios": "^1.8.4",
@@ -22,13 +26,13 @@
     "emoji-picker-react": "^4.12.3",
     "framer-motion": "^12.7.4",
     "jspdf": "^3.0.1",
-    "jspdf-autotable": "^5.0.2", 
+    "jspdf-autotable": "^5.0.2",
     "jwt-decode": "^4.0.0",
     "lodash": "^4.17.21",
     "lucide-react": "^0.488.0",
-    "react": "^19.0.0",
+    "react": "^18.3.1",
     "react-datepicker": "^8.3.0",
-    "react-dom": "^19.0.0",
+    "react-dom": "^18.3.1",
     "react-icons": "^5.5.0",
     "react-markdown": "^10.1.0",
     "react-phone-input-2": "^2.15.1",
