--- a/package.json
+++ b/package.json
@@ -33,8 +33,10 @@
     "react": "^18.3.1",
     "react-datepicker": "^8.3.0",
     "react-dom": "^18.3.1",
+    "react-focus-lock": "^2.13.6",
     "react-icons": "^5.5.0",
     "react-markdown": "^10.1.0",
+    "react-outside-click-handler": "^1.3.0",
     "react-phone-input-2": "^2.15.1",
     "react-router-dom": "^7.5.0",
     "react-select": "^5.10.1",
