--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "react-dom": "^18.3.1",
     "react-focus-lock": "^2.13.6",
     "react-icons": "^5.5.0",
+    "react-intersection-observer": "^9.16.0",
     "react-markdown": "^10.1.0",
     "react-outside-click-handler": "^1.3.0",
     "react-phone-input-2": "^2.15.1",
