--- a/package.json
+++ b/package.json
@@ -17,10 +17,11 @@
     "@headlessui/react": "^2.2.2",
     "@mui/icons-material": "^5.15.14",
     "@mui/material": "^5.15.14",
+    "@mui/x-date-pickers": "^5.0.20",
     "@react-oauth/google": "^0.12.2",
     "@tailwindcss/vite": "^4.1.3",
     "axios": "^1.8.4",
-    "date-fns": "^4.1.0",
+    "date-fns": "^2.30.0",
     "dompurify": "^3.2.6",
     "emoji-mart": "^5.6.0",
     "emoji-picker-react": "^4.12.3",
@@ -30,6 +31,7 @@
     "jwt-decode": "^4.0.0",
     "lodash": "^4.17.21",
     "lucide-react": "^0.488.0",
+    "papaparse": "^5.5.3",
     "react": "^18.3.1",
     "react-datepicker": "^8.3.0",
     "react-dom": "^18.3.1",
