--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "dompurify": "^3.2.6",
     "emoji-mart": "^5.6.0",
     "emoji-picker-react": "^4.12.3",
+    "formik": "^2.4.6",
     "framer-motion": "^12.7.4",
     "jspdf": "^3.0.2",
     "jspdf-autotable": "^5.0.2",
@@ -48,6 +49,7 @@
     "recharts": "^2.15.3",
     "socket.io-client": "^4.8.1",
     "tailwindcss": "^4.1.3",
+    "yup": "^1.7.1",
     "zod": "^3.25.67"
   },
   "devDependencies": {
