--- a/.env
+++ b/.env
@@ -2,3 +2,8 @@ VITE_API_BASE=https://whatsappbackend.foodchow.app
 VITE_RAZORPAY_KEY_ID=rzp_live_MoWUoTrGF0woCD
 VITE_GOOGLE_CLIENT_ID=your-google-client-id.apps.googleusercontent.com
 VITE_FACEBOOK_APP_ID=123456789012345
+
+# Cloudinary Configuration
+VITE_CLOUDINARY_CLOUD_NAME=dv20lztwm
+VITE_CLOUDINARY_UPLOAD_PRESET=dynamic-templates
+# Using existing unsigned preset - files will be uploaded to dynamic-templates folder
